# Pallax

./: .gitignore  CMakeLists.txt  README.md
Kernel/: BootInformation.cpp  BootInformation.h  CMakeLists.txt  kmain.cpp  kstdio.cpp  kstdio.h  linker_script.ld  main.cpp  multiboot.h
Kernel/Architecture/i686/: bootstrap.asm  crti.asm  crtn.asm  io.cpp
Kernel/Devices/: DeviceManager.cpp  DeviceManager.h  SerialPort.cpp  SerialPort.h  Terminal.cpp  Terminal.h  VGATerminal.cpp  VGATerminal.h  io.h
Kernel/IO/: DeviceManager.cpp  DeviceManager.h  Terminal.cpp  Terminal.h  VGA.h  VGATerminal.cpp  VGATerminal.h
Kernel/Memory/: PageUtils.cpp  PageUtils.h  PhysicalPageAllocator.cpp  PhysicalPageAllocator.h
PalLib/: CMakeLists.txt  Optional.h  OutputStream.cpp  OutputStream.h  StdLibExtras.h  StringView.cpp  StringView.h  TypeTraits.h
Pallib/: CMakeLists.txt  OutputStream.cpp  OutputStream.h
Toolchain/: TC-i686-elf.cmake  run_qemu.sh  run_qemu_gdb.sh
